syntax = "proto3";

option csharp_namespace = "GigaStore";

service PuppetMaster {
	//rpc ReplicationFactor (ReplicationFactorRequest) returns (ReplicationFactorReply);
	//rpc NewServer (ServerRequest) returns (ServerReply);
	//rpc Partition (PartitionRequest) returns (PartitionReply);
	rpc Status (StatusRequest) returns (StatusReply);
	rpc CrashServer (CrashRequest) returns (CrashReply);
}

message ReplicationFactorRequest {
	int32 servers = 1;
}

message ReplicationFactorReply {
	string ack = 1;
}

message ServerRequest {
	int32 delay = 1;
}

message ServerReply {
	string ack = 1;
}

message PartitionRequest {
	// TODO
}

message PartitionReply {
	//TODO
}

message StatusRequest {

}

message StatusReply {
	string ack = 1;
}

message CrashRequest {

}

message CrashReply {
	string ack = 1;
}